# KRYS_ketje-cipher

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: monkeyduplex.hpp  monkeywrap.hpp  utils.hpp
lib/KeccakTools/: CMakeLists.txt
lib/Ketje_XKCP/: CMakeLists.txt
lib/ketje/: CMakeLists.txt  config.h  encrypt.c
src/: monkeyduplex.cpp  monkeyduplex.h  monkeywrap.cpp  padding.cpp  padding.h  utils.cpp
test/: test_keccak.cpp  test_ketje.cpp  test_ketje_xkcp.cpp
